# 2025-p1-Abhishekkochar

./: README.md  pyproject.toml
.csse6400/tests/: test_todo.py
todo/: __init__.py
todo/views/: endpoints.http  routes.py
