[project]
name = "2025-p1-abhishekkochar"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhishek kochar",email = "abhishekkochar1@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
